package jp.pgw.lab78.androrm.database.interfaces

/**
 * ## Select 文生成限定 マーカーインターフェース
 */
interface SelectEntity : Entity